`moveDim`, for speed
Fixed overly-big arrays not getting hidden.

Parsing errors are now indicated visually. Looks amazing. (Took half an hour.)

Editable collapsed nodes can be expanded again (though their handling as piece-of-text is still garbage).

Wrote the ultimate README.

Arrays now show their immediate globals in the context menu, auto-updated. (Half an hour.)

`_maxUsageOfCPU` is now 100% by default, not 99%.

No `_globalScope` anymore.

`ToReadableJS` no longer duplicates referenced-many-times objects. All our code now goes through that.

`_resolveStack` is smarter, and now considers self.js as source as index.html is.

DOM GC now only happens if something changed.

(If we had a function like "set numbers/ranges in this memory region to the result of this program with these arguments", and an autodiff for those programs, and based the language around that parallelization primitive, then we could have done good scheduling and had good UX even on GPU. But instead, we used TFJS.)

Completed ALL the computations.

Completed the TGBA paper. After re-reading and editing it many times, it's a fixed point now. It's all over.

--- a/tgba/tgba.bib
+++ b/tgba/tgba.bib
@@ -1,8 +1,30 @@
+@article{pix2pix2017,
+  title={Image-to-Image Translation with Conditional Adversarial Networks},
+  author={Isola, Phillip and Zhu, Jun-Yan and Zhou, Tinghui and Efros, Alexei A},
+  journal={CVPR},
+  year={2017}
+}
+
+@article{Kannangara2018AllTG,
+  title={All That Glitters Is Not Grit: Three Studies of Grit in University Students},
+  author={C. Kannangara and R. E. Allen and G. Waugh and N. Nahar and Samia Zahraa Noor Khan and Suzanne Rogerson and J. Carson},
+  journal={Frontiers in Psychology},
+  year={2018},
+  volume={9}
+}
+
+@article{radford2021learning,
+  title={Learning transferable visual models from natural language supervision},
+  author={Radford, Alec and Kim, Jong Wook and Hallacy, Chris and Ramesh, Aditya and Goh, Gabriel and Agarwal, Sandhini and Sastry, Girish and Askell, Amanda and Mishkin, Pamela and Clark, Jack and others},
+  journal={arXiv preprint arXiv:2103.00020},
+  year={2021}
+}
+
 @inproceedings{izmailov2019averaging,
 title = "Averaging weights leads to wider optima and better generalization",
 abstract = "Deep neural networks are typically trained by optimizing a loss function with an SGD variant, in conjunction with a decaying learning rate, until convergence. We show that simple averaging of multiple points along the trajectory of SGD, with a cyclical or constant learning rate, leads to better generalization than conventional training. We also show that this Stochastic Weight Averaging (SWA) procedure finds much broader optima than SGD, and approximates the recent Fast Geometric Ensem-bling (FGE) approach with a single model. Using SWA we achieve notable improvement in test accuracy over conventional SGD training on a range of state-of-the-art residual networks, PyramidNets, DenseNets, and ShakeShake networks on CIFAR-10, CIFAR-100, and ImageNet. In short, SWA is extremely easy to implement, improves generalization, and has almost no computational overhead.",
 author = "Pavel Izmailov and Dmitrii Podoprikhin and Timur Garipov and Dmitry Vetrov and Wilson, {Andrew Gordon}",
-note = "Funding Information: Acknowledgements. This work was supported by NSF IIS-1563887, Samsung Research, Samsung Electronics and Russian Science Foundation grant 17-11-01027. We also thank Vadim Bereznyuk for helpful comments. Funding Information: This work was supported by NSF IIS-1563887, Samsung Research, Samsung Electronics and Russian Science Foundation grant 17-11-01027. We also thank Vadim Bereznyuk for helpful comments. Publisher Copyright: {\textcopyright} 34th Conference on Uncertainty in Artificial Intelligence 2018. All rights reserved.; 34th Conference on Uncertainty in Artificial Intelligence 2018, UAI 2018 ; Conference date: 06-08-2018 Through 10-08-2018",
+note = "Publisher Copyright: {\textcopyright} 34th Conference on Uncertainty in Artificial Intelligence 2018, all rights reserved; 34th Conference on Uncertainty in Artificial Intelligence 2018, UAI 2018 ; Conference date: 06-08-2018 Through 10-08-2018",
 year = "2018",
 language = "English (US)",
 series = "34th Conference on Uncertainty in Artificial Intelligence 2018, UAI 2018",
@@ -31,8 +53,6 @@ url={https://pubmed.ncbi.nlm.nih.gov/12991237},
 url={https://doi.org/10.1113/jphysiol.1952.sp004764},
 language={eng}
 }
-
-
 
 @misc{peng2021hyperbolic,
       title={Hyperbolic Deep Neural Networks: A Survey}, 
