--- a/tgba/tgba.bib
+++ b/tgba/tgba.bib
@@ -1,3 +1,57 @@
+@article{Hahn_2020,
+   title={Theoretical Limitations of Self-Attention in Neural Sequence Models},
+   volume={8},
+   ISSN={2307-387X},
+   url={http://dx.doi.org/10.1162/tacl_a_00306},
+   DOI={10.1162/tacl_a_00306},
+   journal={Transactions of the Association for Computational Linguistics},
+   publisher={MIT Press - Journals},
+   author={Hahn, Michael},
+   year={2020},
+   month={Dec},
+   pages={156–171}
+}
+
+
+@misc{dosovitskiy2021image,
+      title={An Image is Worth 16x16 Words: Transformers for Image Recognition at Scale}, 
+      author={Alexey Dosovitskiy and Lucas Beyer and Alexander Kolesnikov and Dirk Weissenborn and Xiaohua Zhai and Thomas Unterthiner and Mostafa Dehghani and Matthias Minderer and Georg Heigold and Sylvain Gelly and Jakob Uszkoreit and Neil Houlsby},
+      year={2021},
+      eprint={2010.11929},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@Article{Khan2020,
+author={Khan, Asifullah
+and Sohail, Anabia
+and Zahoora, Umme
+and Qureshi, Aqsa Saeed},
+title={A survey of the recent architectures of deep convolutional neural networks},
+journal={Artificial Intelligence Review},
+year={2020},
+month={Dec},
+day={01},
+volume={53},
+number={8},
+pages={5455-5516},
+abstract={Deep Convolutional Neural Network (CNN) is a special type of Neural Networks, which has shown exemplary performance on several competitions related to Computer Vision and Image Processing. Some of the exciting application areas of CNN include Image Classification and Segmentation, Object Detection, Video Processing, Natural Language Processing, and Speech Recognition. The powerful learning ability of deep CNN is primarily due to the use of multiple feature extraction stages that can automatically learn representations from the data. The availability of a large amount of data and improvement in the hardware technology has accelerated the research in CNNs, and recently interesting deep CNN architectures have been reported. Several inspiring ideas to bring advancements in CNNs have been explored, such as the use of different activation and loss functions, parameter optimization, regularization, and architectural innovations. However, the significant improvement in the representational capacity of the deep CNN is achieved through architectural innovations. Notably, the ideas of exploiting spatial and channel information, depth and width of architecture, and multi-path information processing have gained substantial attention. Similarly, the idea of using a block of layers as a structural unit is also gaining popularity. This survey thus focuses on the intrinsic taxonomy present in the recently reported deep CNN architectures and, consequently, classifies the recent innovations in CNN architectures into seven different categories. These seven categories are based on spatial exploitation, depth, multi-path, width, feature-map exploitation, channel boosting, and attention. Additionally, the elementary understanding of CNN components, current challenges, and applications of CNN are also provided.},
+issn={1573-7462},
+doi={10.1007/s10462-020-09825-6},
+url={https://doi.org/10.1007/s10462-020-09825-6}
+}
+
+
+
+@misc{he2015deep,
+      title={Deep Residual Learning for Image Recognition}, 
+      author={Kaiming He and Xiangyu Zhang and Shaoqing Ren and Jian Sun},
+      year={2015},
+      eprint={1512.03385},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
 @article{pix2pix2017,
   title={Image-to-Image Translation with Conditional Adversarial Networks},
   author={Isola, Phillip and Zhu, Jun-Yan and Zhou, Tinghui and Efros, Alexei A},
