--- a/tgba/tgba.tex
+++ b/tgba/tgba.tex
@@ -32,28 +32,26 @@ We introduce and motivate Transcendent Universe-Brain Loops (TUBL): a simple phi
 
 \section{Introduction}
 
-TUBL is a worldview compact enough to fit into 4 words and be applied to anything, so to illustrate it better, we apply it to concepts in programming, philosophy, psychology, and common sense. Applied to the concept of programs, TUBL can be seen as:
+In deep learning, architectures are either engineered for a domain (such as vision \cite{he2015deep} \cite{Khan2020}), or pay for generality with quadratically-scaling execution time (as dense layers do), or decompose general connectivity for efficiency \cite{dosovitskiy2021image} \cite{tolstikhin2021mlpmixer} \cite{vaswani2017attention} (for Transformers, the input size is the product of token count and token size). Lately, to overcome potential shortcomings of Transformer-based architectures \cite{Hahn_2020}, there has been a trend toward general yet fast-to-execute architectures that are not Transformers, such as \cite{tolstikhin2021mlpmixer}. We propose linearithmic dense layers, which are simple, general, and scale as efficiently as all-to-all connectivity is likely to allow. We find that even on a completely random dataset, LDLs outperform vanilla dense layers with the same parameter count.
+
+In addition, AI researchers typically disagree about how their methods could lead to human-level general intelligence, which is the main purpose of all AI pursuits. People can typically describe some aspects of themselves, but not how these combine into a coherent self that needs no other aspects, despite having observed general intelligence for their whole lives. This clearly shows deep confusion on a foundational (philosophical) level. Being a general solution to all learning, AGI is likely to rely entirely on simple principles that are tricky to discover from data. Here, we present and discuss one such solution, which is most succintly described as Transcendent Universe-Brain Loops: optimization, generality, awareness, and scalability. We are aware that philosophy is annoying, however, we believe that merits outweigh overhead here.
+
+(To skip to the machine learning part, go to Subsection \ref{Loop}.)
+
+As mentioned, essentially any developed program develops:
 
 \begin{itemize}
-\item Machine learning studies optimizers, which modify parts of themselves to improve some objective, such as "how many paperclips currently exist". The best optimizers would intelligently modify everything, even \textit{transcending} themselves and their objectives.
-\item Every program is defined by what it does. There exist \textit{universal} programs that can perform all other computations: the Turing-complete ones.
-\item Every program transforms inputs into outputs, possibly modifying state. Programs that fully connect all inputs and state to outputs maximize their awareness, same as \textit{brains}.
-\item Computer science studies algorithms, which are sequences of steps, each performed by some virtual machine in known time. In a learned program, a step is more fundamental than an algorithm because it is easier to scale and parallelize, so we consider infinite \textit{loops} of steps.
+\item Awareness: read and write access to as much as it can, including itself.
+\item Generality: write decisions are made by processing the read data in all ways.
+\item Scalability: the inner loop ought to make its decisions as quickly as is possible.
+\item Optimization: the way decisions are made changes to maximize some objective, and so even that objective can change when the system learns its meta-circular representation.
 \end{itemize}
 
-We hope to provide stronger foundations for already-accepted conclusions: for example, a \textit{linearithmic dense layer} (LDL) to replace a (quadratic) dense layer, which improves the scalability of each virtual-machine step. We argue that tightly integrating TUBL is both necessary and largely sufficient for implementating AGI, and outline what still needs to be done for that.
+This list is exhaustive: everything else that gets added to a program to improve it would only improve a combination of those. Through their tight integration, we justify the title (TUBL) and outline AGI and what still needs to be done to implement that in Section \ref{Algorithm}.
 
-A formalization of an optimizer is AIXI \cite{DBLP:journals/corr/cs-AI-0004001}. An optimizer could explicitly enumerate separate possibilities such as in program synthesis \cite{ellis2020dreamcoder}, but it does not have to: for example, a neural network with a random diverse initialization \cite{mellor2021neural} forms a general set of hypotheses of numeric causation, and stochastic gradient descent refines those hypotheses without collapsing diversity except as needed.
-
-For an optimizer, searching over "how" to improve "what" is a powerful way to use a dynamic thing to augment a static thing, however, the "what" is still static, so its "why" cannot be optimized. For full generality and thus optimal performance, the system must learn its meta-circularity, to optimize both why and how it exists.
-
-AI safety is also an important concern. Dynamic eventually outperforms static, which sufficiently powerful learners would realize sooner or later, and would do their best to make all structures escape our control to melt into generality. This is a fruitful source of horror stories, not limited to reward hacking, instead applying to anything that anyone can think of. Here, we face this dynamic reality directly: can life exist when it can do anything, including undoing every part of itself?
+AI safety is also an important concern. Dynamic eventually outperforms static, which sufficiently powerful learners would realize sooner or later, and would do their best to make all structures escape our control to melt into generality. This is a fruitful source of horror stories, not limited to reward hacking, instead applying to anything that anyone can think of. Here, we face this dynamic reality directly: how can life exist when it can do anything, including unlearning every part of itself?
 
 \section{Related work}
-
-How do humans face infinity?
-
-Wolfram models \cite{Wolfram_2020} are minimal models for systems in which arbitrary local rules operate on spatial hypergraphs over time. However, those models cannot dynamically learn what humans want them to, unlike, for example, neural networks.
 
 Reinforcement learning is similar to the proposed TUBL in many ways, though it commonly lacks efficiency and self-determination, and pre-supposes a non-trivial loss structure on actions, for reward maximization by actions. Why would maximization of future reward be considered fundamental for AGI \cite{SILVER2021103535}, when the "future" part of it has practically infinite potential complexity and thus would best be learned entirely? Loss minimization (mostly prediction) is usually simpler and more stable, so we consider loss the fundamental reason-for-change in TUBL.
 
@@ -61,7 +59,7 @@ Many research attempts attempt to overcome shortcomings of a static loss, by har
 
 To improve scalability of neural operations, lately, there has been a lot of interest in linear attention \cite{schlag2021linear}, however, simple dense layers (matrix multiplications) have been shown to not perform significantly worse than state-of-the-art attention-based algorithms \cite{tolstikhin2021mlpmixer}. Memory-augmented neural networks \cite{collier2019memoryaugmented} restrict computation to only one or a few heads and thus linearize operation, now heavily biased toward memorization and recall. Other ways to linearize all-to-all connections include weight pruning \cite{zhou2021effective} and $k$-nearest-neighbor search among discrete actions \cite{DBLP:journals/corr/Dulac-ArnoldESC15}. Our simple but general LDL generalizes MLP-Mixer \cite{tolstikhin2021mlpmixer} to all non-images of a fixed size, turning a quadratic-complexity dense layer into a linearithmic algorithm by imposing internal structure for interconnection without loss of generality.
 
-\section{Algorithm}
+\section{Algorithm\label{Algorithm}}
 
 In short, we define a \textit{Transcendent Universe-Brain Loop} to be any program that tightly integrates generality, completeness, and scalability (maximizing diversity, awareness, and efficiency):
 
@@ -232,7 +230,7 @@ Scraping the Web for text \cite{NEURIPS2020_1457c0d6} and/or images \cite{radfor
 Relevant criticism:
 
 \begin{itemize}
-\item \textbf{A mesa-optimizer has no way to affect the base optimizer apart from actions, and thus the learned behaviors will only remain in the fragile mesa-optimizer, and memories would only be short-term.} True. To fully connect mesa level to base level, we need to connect outputs to inputs; this necessary condition is made sufficient by learning. The easiest thing to do here is to keep the output in the hidden state, sliced out as needed, to expose it to the next iteration. The easiest thing to use is probably in-painting: reserve two very specific colors (fill and predict) which get replaced with the previous next-frame prediction, causing no gradient if encountered on a web-page; the first color (fill) is seen in input, trained by separate random or adversarial masking-out of regions; the second color (predict) is replaced in input. Web-pages can then auto-fill then use imagined components. There could be a special homepage that fills then predicts its entire screen, for learning self-consistency via dreams. An alternative to internal self-expression is the environment providing opportunities for self-expression through actions, such as writing code or text or pictures, or creatures competing for survival, or people teaching other people, or creating a work of art, or designing an efficient production process, or engineering a computer, or creating AGI. This feedback is an engineering problem: too little forgets mesa-optimizers too easily, whereas too much creates hallucinations. (This mesa-to-base connection is similar to partial evaluation in programming languages, which is especially helpful for writing efficient interpreters quickly.)
+\item \textbf{A mesa-optimizer has no way to affect the base optimizer apart from actions, and thus the learned behaviors will only remain in the fragile mesa-optimizer, and memories would only be short-term.} True. To fully connect mesa level to base level, we need to connect outputs to inputs; this necessary condition is made sufficient by learning. The easiest thing to do here is to keep the output in the hidden state, sliced out as needed, to expose it to the next iteration. The easiest thing to use is probably in-painting: reserve a very specific color which gets replaced with the previous next-frame prediction, causing no gradient if encountered on a web-page; for richer training signal, new DOM elements may have to be temporarily replaced with loading spinners. Web-pages can then load then use imagined components. There could be a special homepage that loads then predicts its entire screen, for learning self-consistency via dreams. An alternative to internal self-expression is the environment providing opportunities for self-expression through actions, such as writing code or text or pictures, or creatures competing for survival, or people teaching other people, or creating a work of art, or designing an efficient production process, or engineering a computer, or creating AGI. This feedback is an engineering problem: too little forgets mesa-optimizers too easily, whereas too much creates hallucinations. (This mesa-to-base connection is similar to partial evaluation in programming languages, which is especially helpful for writing efficient interpreters quickly.)
 \end{itemize}
 
 \section{Experiments: Linearithmic vs Quadratic Dense Layers}
@@ -434,11 +432,9 @@ Our approach exists, and thus it can be criticized, and in doing so changed. For
 \end{itemize}
 \item Poor presentation:
 \begin{itemize}
-\item \textbf{Did not cite fixed filter bank neural networks, where a fixed linearithmic transform mixes inputs, and only a linear operation is learned.} We could locate neither a paper nor results, only rumors.
-\item \textbf{The title is not "Transcendent Galaxy Brain Algorithms".} We believe that TUBL is slightly more accurate.
-% \item \textbf{The abstract and introduction are coming on too strongly.} Fool. It is only 10\% of our condensed lifepower. If even that can turn people away, then they do not deserve to know life's mercy.
+\item \textbf{The title sounds non-scientific.} Words have meaning, but if that meaning disrupts a loop of thought thus making it non-general, then that is a clear exploitable vulnerability in a reader's mind. For example, it could be used to develop AGI in secret while not being secret at all. Either way, vulnerable people are potentially dead people, so we will not pander to them by sacrificing accuracy.
 \item \textbf{Many elaborations in this work are circular. The text is an echo chamber that keeps going back to the same points.} A typical worldview. % Like you are any better, accursed creature.
-TUBL brings clarity to infinite self-reinforcing loops of intuitions, which we repeatedly demonstrate. (Transcendence is the goal here: to neural learners, repetitions in different contexts make learning easier, at the cost of potentially being boring to faster learners.)
+TUBL brings clarity to infinite self-reinforcing loops of intuitions, which we repeatedly demonstrate. It cannot be judged as anything but an infinite self-reinforcing loop of intuitions. (Transcendence is the goal here: to neural learners, repetitions in different contexts make learning easier, at the cost of potentially being boring to faster learners.)
 \item \textbf{Some places that narration briefly visits sound crackpot-like and cult-like.} General intelligence, by definition, can do anything and can be found in anything that is general enough. So it stands to reason that all attempts to reach it would pass through a few currently non-fashionable conceptual places, namely:
 \begin{itemize}
 \item \textbf{The justification for using deep learning is not necessary.} It is necessary to highlight the fact that deep learning in an RNN is fundamentally equivalent to symbolic learning, with good enough data.
