Upside-Down RL was apparently done before Schmidhuber. Huh.

--- a/tgba/tgba.bib
+++ b/tgba/tgba.bib
@@ -1,3 +1,12 @@
+@misc{dosovitskiy2017learning,
+      title={Learning to Act by Predicting the Future}, 
+      author={Alexey Dosovitskiy and Vladlen Koltun},
+      year={2017},
+      eprint={1611.01779},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
 @article{Hahn_2020,
    title={Theoretical Limitations of Self-Attention in Neural Sequence Models},
    volume={8},
