--- a/tgba/tgba.tex
+++ b/tgba/tgba.tex
@@ -204,7 +204,7 @@ A big RNN with a linear-time all-mixing transition would in principle be able to
 Not any loss is conducive to transcendence: a simple counter-example is "kill yourself". The most transcendent loss and its optimizer would possess:
 \begin{itemize}
 \item Efficiency. Stochastic gradient descent scales mostly linearly with parameter count, in both execution speed and improvement rate, so it is a good enough optimizer of loss.
-\item Awareness. Mesa-optimizers are significantly more complex and fragile than a heuristic (since any optimizer consists of at least "why" and "what", or "what" and "how", whereas a heuristic is anything else), and thus for transcendence, loss ought to be as stable as the outer world. The simplest such loss \textit{predicts all} its inputs, for example, minimizing L2 loss. (Vanilla RL is likely to have difficulties transcending; Upside Down RL \cite{schmidhuber2020reinforcement} may work better; observation prediction may work even better, because of its significantly increased bandwidth: a kind of detachment from the world may be the best way to fully understand it.)
+\item Awareness. Mesa-optimizers are significantly more complex and fragile than a heuristic (since any optimizer consists of at least "why" and "what", or "what" and "how", whereas a heuristic is anything else), and thus for transcendence, loss ought to be as stable as the outer world. The simplest such loss \textit{predicts all} its inputs, for example, minimizing L2 loss. (Vanilla RL is likely to have difficulties transcending; Upside Down RL \cite{dosovitskiy2017learning} \cite{schmidhuber2020reinforcement} may work better; observation prediction may work even better, because of its significantly increased bandwidth: a kind of detachment from the world may be the best way to fully understand it.)
 \item Diversity/generalization. For better compression in an infinite world, the loss ought to both discourage memorizing training samples, and not predict samples not in the training data. For instance, L2 loss averages over possible predictions, introducing an extra averaged sample, so it is not good enough. A more robust loss would incorporate some adversarial training, similarly to pix2pix \cite{pix2pix2017}, to \textit{guess} only one plausible future.
 
 For self-determination to happen, random actions have to become explained by observation sequences. If a plausible yet general (beyond memorization) reason exists, then it will be found and become a mesa-optimizer, for better compression.
