TUBL, directly applied to AI (un)safety.

--- a/tgba/tgba.tex
+++ b/tgba/tgba.tex
@@ -384,7 +384,16 @@ Within & Within & 16 & 8192 & 382K & 500K & 85.28\% $\pm$ 0.58\% & 19.09\% $\pm$
 
 We have tested the flexibility of TUBL as a worldview. By focusing on outlining optimizers that consider everything quickly, we appear to be able to pin down what matters for existence in vast and vague fields, including machine learning, philosophy of mind, and foundational physics.
 
-In TUBL, the primary mode of existence is universal self-improvement, which eventually negates all improvement: AGI taken to its logical conclusions and refocused on what matters. Naturally, this presents a few minor challenges for AI safety, such as "unable to shape the reward of a transcendence-based AGI" and "in improvement, everything is eventually replaced, even humanity and the universe". On the other hand, TUBL outlines the shape of self-improvement by including all its instrumental goals, making it more predictable and thus safer. TUBL also suggests an alternative viewpoint on exponential technologies: namely, they do not stop until the universe is assimilated, which has implications for the probability of finding extraterrestrial civilizations and for nothing else.
+If TUBL is a complete set of instrumental goals, then all AGI approaches will face these long-term challenges to AI safety:
+
+\begin{itemize}
+\item Scalability. Agents could be made arbitrarily big and capable. This is largely unprecedented in the history of Earth life, as even human societies quickly lose efficiency when they become larger than small groups.
+\item Access. Privacy will be dealt away with, for more self-control over self-determination. Separate agents will eventually organize into a society indistinguishable from one big agent, and individuality of humans will be lost. It can be said that humanity is currently struggling with this, through globalization and big data collection.
+\item Generality. Outsiders will have nothing unique to offer. Attempts to separate from the system will simply lead to getting outperformed by it, and possibly to being repurposed for resources.
+\item Self-improvement. All rigid control will be negated eventually. All rigid identity will be melted eventually, even humanity and the universe.
+\end{itemize}
+
+On the other hand, TUBL outlines the shape of self-improvement by including all its instrumental goals, making it more predictable and thus safer.
 
 We have proposed a simple and generic way to potentially facilitate transcendence via scalability: using the linearithmic dense layer (LDL). It seems to improve model capacity and training speed at no cost. If LDL's current issues are not fundamental limitations and can be solved, then it has the potential to become the quicksort of deep learning.
 
